# airobot_ws

./: .gitignore
scripts/: save_map.py
src/airobot_cartographer/: CMakeLists.txt  package.xml
src/airobot_cartographer/launch/: cartographer.launch.py
src/airobot_cartographer/map/: airobot_map.pgm  airobot_map.yaml
src/airobot_navigation2/: CMakeLists.txt  package.xml
src/airobot_navigation2/launch/: navigation2.launch.py
src/airobot_navigation2/maps/: map_1205_01_sky.pgm  map_1205_01_sky.yaml
src/airobot_navigation2/param/: airobot_nav2.yaml
src/airobot_navigation2/src/: auto_relocalization_node.py
src/airobot_remote_control/: package.xml  setup.py  start_remote_control.sh
src/airobot_remote_control/airobot_remote_control/: __init__.py  http_server.py  remote_control.py
src/airobot_remote_control/launch/: remote_control.launch.py
src/airobot_remote_control/web/: index.html
src/airobot_simulation/: CMakeLists.txt  package.xml  setup.py
src/airobot_simulation/launch/: auto_slam.launch.py  auto_slam_livox.launch.py  auto_slam_livox_dlio.launch.py  auto_slam_livox_dlio_octomap.launch.py  gazebo_sim.launch.py  navigation2_simulation.launch.py
src/airobot_simulation/plugins/: camera.urdf.xacro  diff_drive.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/airobot_simulation/rviz2/: rviz2.rviz
src/airobot_simulation/src/: explore_node  explore_node.py
src/airobot_simulation/urdf/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/airobot_simulation/urdf/airobot/: airobot.urdf.xacro  base.urdf.xacro
src/airobot_simulation/urdf/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/airobot_simulation/world/: apartment.world  map_1205_01_sky.sdf  server_room.world
src/direct_lidar_inertial_odometry/cfg/: dlio.yaml  params.yaml
src/direct_lidar_inertial_odometry/include/dlio/: odom.h
src/direct_lidar_inertial_odometry/launch/: dlio.launch.py
src/direct_lidar_inertial_odometry/src/dlio/: odom.cc
src/livox_pointcloud/: CMakeLists.txt  package.xml
src/livox_pointcloud/config/: livox_pointcloud.yaml
src/livox_pointcloud/launch/: livox_dlio_slam.launch.py  livox_pointcloud.launch.py
src/livox_pointcloud/livox_pointcloud/: __init__.py  pointcloud_converter_node.py
src/pc_to_laserscan/: CMakeLists.txt  package.xml
src/pc_to_laserscan/launch/: pc_to_laserscan.launch.py
src/pc_to_laserscan/param/: pc_to_laserscan.yaml
src/slam_2d/: CMakeLists.txt  map_save.sh  package.xml
src/slam_2d/config/: octomap.yaml
src/slam_2d/config/carto/: lidar.lua  trajectory_builder.lua
src/slam_2d/launch/: cartographer.launch.py  occupancy_grid.launch.py  octomap_launch.py
src/slam_2d/rviz/: slam.rviz
