<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>airobot_remote_control</name>
  <version>1.0.0</version>
  <description>Web-based remote controller for robot car</description>
  <maintainer email="robot@example.com">Robot Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-flask</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
