<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pc_to_laserscan</name>
  <version>0.0.0</version>
  <description>PointCloud to LaserScan conversion package</description>
  <maintainer email="edward.li@cloudwise.com">edward</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>pointcloud_to_laserscan</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>rclpy</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
